--- a/packages/style-stencila/src/atoms/menu.css
+++ b/packages/style-stencila/src/atoms/menu.css
@@ -1,6 +1,7 @@
-:host {
+:host,
+stencila-menu {
   ul {
-    @apply absolute z-10 inline-block p-0 m-0 border border-solid rounded shadow-md bg-stock border-neutral-100;
+    @apply absolute z-30 inline-block p-0 m-0 border border-solid rounded shadow-md bg-stock border-neutral-100;
     min-width: 112px;
 
     &[aria-hidden] {
